# task_manager

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: __init__.py  env.py
scripts/: start.sh
src/: exception_handlers.py  exceptions.py  main.py
src/api/: __init__.py
src/api/system/: __init__.py  healthcheck_controller.py
src/api/v1/: project_controller.py  user_controller.py
src/app/: __init__.py
src/app/config/: db.py  email.py  logging.py  openapi.py  project.py  sqlalchemy_plugin.py
src/domain/project/: constants.py  interface.py  project_usecase.py
src/domain/project/dtos/: project_dto.py
src/domain/user/: user_dto.py
src/infra/database/: db_helper.py
src/infra/models/: project_model.py
src/infra/repositories/: project_repository.py
src/lib/: usecase.py
