[tool.poetry]
name = "djwoms_ru"
version = "0.1.0"
description = ""
authors = ["Omelchenko Michael <socanime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = {extras = ["sqlalchemy"], version = "^2.6.0"}
uvicorn = "^0.27.1"
pydantic = {extras = ["email"], version = "^2.6.1"}
pydantic-settings = "^2.2.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
